grammar.js
        document: ($) => repeat($._node),
        _node: ($) => choice(
          $.doctype,
          $.entity,
          $.text,
          $.element,
          $.script_element,
          $.style_element,
          $.erroneous_end_tag
        ),
        element: ($) => choice(
          seq(
            $.start_tag,
            repeat($._node),
            choice($.end_tag, $._implicit_end_tag)
          ),
          $.self_closing_tag
        ),
        start_tag: ($) => seq(
          "<",
          alias($._start_tag_name, $.tag_name),
          repeat($.attribute),
          ">"
        ),
        self_closing_tag: ($) => seq(
          "<",
          alias($._start_tag_name, $.tag_name),
          repeat($.attribute),
          "/>"
        ),
        end_tag: ($) => seq(
          "</",
          alias($._end_tag_name, $.tag_name),
          ">"
        ),
        erroneous_end_tag: ($) => seq(
          "</",
          $.erroneous_end_tag_name,
          ">"
        ),
        attribute: ($) => seq(
          $.attribute_name,
          optional(seq(
            "=",
            choice(
              $.attribute_value,
              $.quoted_attribute_value
            )
          ))
        ),
        attribute_name: (_) => /[^<>"'/=\s]+/,
        attribute_value: (_) => /[^<>"'=\s]+/,
        // An entity can be named, numeric (decimal), or numeric (hexacecimal). The
        // longest entity name is 29 characters long, and the HTML spec says that
        // no more will ever be added.
        quoted_attribute_value: ($) => choice(
          seq("'", optional(alias(/[^']+/, $.attribute_value)), "'"),
          seq('"', optional(alias(/[^"]+/, $.attribute_value)), '"')
        ),
        text: (_) => /[^<>&\s]([^<>&]*[^<>&\s])?/
      }
    });
  }
});

// main/NodeMap.ts
var NodeMap = class {
  cachedNodes;
  extraNodes;
  constructor() {
    this.cachedNodes = /* @__PURE__ */ new Map();
    this.extraNodes = /* @__PURE__ */ new Set();
  }
  /**
   * The method used to collect, cache and return the entire grammar
   * new nodes needing cached can be added at a later point
   */
  add(...nodes2) {
    if (this.size() != 0) {
      nodes2.forEach((node) => {
        if (!this.has(node)) {
          this.set(node);
        }
      });
      return this.cachedNodes.values();
    }
    nodes2.forEach((node) => this.set(node));
    return this.cachedNodes.values();
  }
  /**
   * Map the node to the cache
   */
  set(node) {
    this.cachedNodes.set(node.name, node);
  }
  /**
   * returns all the cached nodes, including the extra nodes specified
   */
  all() {
    return this.extraNodes.size == 0 ? this.cachedNodes.values() : this.mergedWith(...this.cachedNodes.values());
  }
  /**
   * rule specific nodes to be used temporarily.
   */
  with(...nodes2) {
    nodes2.forEach((node) => this.extraNodes.add(node));
    return this;
  }
  /**
   * Checks if a node already exists
   */
  has(node) {
    return this.cachedNodes.has(node.name);
  }
  /**
   * Return cached nodes without the specified nodes.
   *
   * If extra nodes are provided, it will be merged and returned as well
   */
  without(...nodes2) {
    const temp = new Map(this.cachedNodes);
    nodes2.forEach((node) => temp.delete(node.name));
    return this.extraNodes.size == 0 ? temp.values() : this.mergedWith(...temp.values());
  }
  /**
   * returns the size of the Data Structure
   */
  size() {
    return this.cachedNodes.size;
  }
  /**
   * Return the merged node set and clears the extraNodes.
   */
  mergedWith(...nodes2) {
    const temp = new Set(this.extraNodes);
    this.extraNodes.clear();
    return temp.union(new Set(nodes2));
  }
};

// main/grammar.ts
var import_grammar = __toESM(require_grammar());
var nodes = new NodeMap();
var grammar_default = grammar(import_grammar.default, {
  name: "blade",
  rules: {
    // The entire grammar
    _node: ($) => choice(
      ...nodes.add(
        // tree-sitter-html
        $.doctype,
        $.entity,
        $.text,
        $.element,
        $.script_element,
        $.style_element,
        $.erroneous_end_tag,
        // tree-sitter-blade
        $.keyword,
        $.php_statement,
        $._inline_directive,
        $.comment,
        $.switch,
        $.loop,
        $.envoy,
        $.livewire,
        // nested
        $.fragment,
        $.section,
        $.once,
        $.verbatim,
        $.stack,
        // conditional
        $.conditional
      )
    ),
    // ------------------
    // https://stackoverflow.com/questions/13014947/regex-to-match-a-c-style-multiline-comment/36328890#36328890
    comment: (_) => token(seq("{{--", /[^-]*-+([^}-][^-]*-+)*/, "}}")),
    // !keywords
    php_statement: ($) => choice($._escaped, $._unescaped, $._setup, $._raw, $._php),
    // Override element to support dynamic Blade tags: <{{ $tag }}>...</{{ $tag }}>
    element: ($) => choice(
      seq(
        $.start_tag,
        repeat($._node),
        choice($.end_tag, $._implicit_end_tag)
      ),
      $.self_closing_tag,
      seq(
        $.dynamic_start_tag,
        repeat($._node),
        $.dynamic_end_tag
      )
    ),
    start_tag: ($) => seq(
      "<",
      alias($._start_tag_name, $.tag_name),
      repeat(choice(
        $.attribute,
        $.comment,
        $._tag_directive
      )),
      ">"
    ),
    self_closing_tag: ($) => seq(
      "<",
      alias($._start_tag_name, $.tag_name),
      repeat(choice(
        $.attribute,
        $.comment,
        $._tag_directive
      )),
      "/>"
    ),
    _tag_directive: ($) => choice(
      alias(token(prec(1, /@end[a-zA-Z]+/)), $.directive_end),
      seq(alias("@if", $.directive_start), $._directive_parameter),
      seq(alias("@unless", $.directive_start), $._directive_parameter),
      seq(alias("@isset", $.directive_start), $._directive_parameter),
      seq(alias("@empty", $.directive_start), $._directive_parameter),
      seq(alias("@foreach", $.directive_start), $._directive_parameter),
      seq(alias("@forelse", $.directive_start), $._directive_parameter),
      seq(alias("@for", $.directive_start), $._directive_parameter),
      seq(alias("@while", $.directive_start), $._directive_parameter),
      seq(alias("@switch", $.directive_start), $._directive_parameter),
      seq(alias("@case", $.directive), $._directive_parameter),
      seq(alias("@push", $.directive_start), $._directive_parameter),
      seq(alias("@section", $.directive_start), $._directive_parameter),
      seq(alias("@auth", $.directive_start), optional($._directive_parameter)),
      seq(alias("@guest", $.directive_start), optional($._directive_parameter)),
      seq(alias("@can", $.directive_start), $._directive_parameter),
      seq(alias("@cannot", $.directive_start), $._directive_parameter),
      seq(alias("@error", $.directive_start), optional($._directive_parameter)),
      seq(alias("@env", $.directive_start), $._directive_parameter),
      seq(alias("@hasSection", $.directive_start), $._directive_parameter),
      seq(alias("@sectionMissing", $.directive_start), $._directive_parameter),
      seq(alias("@elseif", $.directive), $._directive_parameter),
      alias("@else", $.directive),
      alias("@default", $.directive),
      alias("@break", $.directive),
      alias("@continue", $.directive),
      $.keyword
    ),
    // From tree-sitter-php
    _php: ($) => seq(
      $.php_tag,
      optional(alias($.text, $.php_only)),
      $.php_end_tag
    ),
    _escaped: ($) => seq(
      "{{",
      optional(alias($.text, $.php_only)),
      "}}"
    ),
    _unescaped: ($) => seq(
      "{!!",
      optional(alias($.text, $.php_only)),
      "!!}"
    ),
    // ! raw php
    _raw: ($) => choice($._inline_raw, $._multi_line_raw),
    attribute: ($) => choice(
      $._blade_attribute,
      $._html_attribute,
      $.php_statement
    ),
    attribute_name: (_) => token(prec(-1, /[^<>"'/=\s]+/)),
    attribute_value: (_) => token(prec(-1, /[^<>"'/=\s]+/)),
    quoted_attribute_value: ($) => choice(
      seq(
        "'",
        optional(
          repeat(
            choice(
              $.php_statement,
              $.conditional,
              $._inline_directive,
              $.comment,
              alias($._singly_quoted_attribute_text, $.attribute_value)
            )
          )
        ),
        "'"
      ),
      seq(
        '"',
        optional(
          repeat(
            choice(
              $.php_statement,
              $.conditional,
              $._inline_directive,
              $.comment,
              alias($._doubly_quoted_attribute_text, $.attribute_value)
            )
          )
        ),
        '"'
      )
    ),
    // utilised from tree-sitter-html
    _html_attribute: ($) => seq(
      $.attribute_name,
      optional(
        seq(
          "=",
          choice($.attribute_value, $.quoted_attribute_value)
        )
      )
    ),
    // ! Conditional Blade Attribute Directives
    _blade_attribute: ($) => seq(
      alias(
        choice(
          "@class",
          "@style",
          "@checked",
          "@selected",
          "@disabled",
          "@readonly",
          "@required"
        ),
        $.directive
      ),
      $._directive_parameter
    ),
    // !inline directives
    // Known directives get explicit `directive` node type. The catch-all regex
    // (same token prec as _custom) ensures GLR explores BOTH paths for unknown
    // @word(...). prec.dynamic(-1) on the whole rule means _custom (dynamic 1)
    // wins when @endword exists; inline wins when it doesn't.
    _inline_directive: ($) => prec.dynamic(-1, seq(
      alias(
        choice(
          "@include",
          "@includeIf",
          "@includeWhen",
          "@includeUnless",
          "@includeFirst",
          "@extends",
          "@yield",
          "@method",
          "@inject",
          "@each",
          "@vite",
          "@livewire",
          "@aware",
          "@servers",
          "@import",
          "@js",
          "@svg",
          "@props",
          "@use",
          "@stack",
          // log1x/sage-directives #77
          "@asset",
          "@json",
          "@script",
          "@thumbnail",
          "@extract",
          "@set",
          // ACF (Advanced Custom Fields)
          "@field",
          "@options",
          // WireUI
          "@wireUiScripts",
          // Laravel core — localization
          "@lang",
          "@trans",
          "@choice",
          // Laravel core — debugging
          "@dd",
          "@dump",
          // Laravel core — forms/session
          "@old",
          // Common packages
          "@route",
          "@cache",
          "@entangle",
          // Catch-all: any @word not explicitly listed.
          // Same token prec as _custom so GLR explores both paths.
          token(prec(-1, /@[a-zA-Z_][a-zA-Z\d_]*/))
        ),
        $.directive
      ),
      $._directive_parameter
    )),
    // !nested directives
    conditional: ($) => choice(
      $._if,
      $._unless,
      $._isset,
      $._empty,
      $._auth,
      $._guest,
      $._production,
      $._env,
      $._hasSection,
      $._sectionMissing,
      $._error,
      $._authorization,
      $._feature,
      $._custom
    ),
    // used in the conditional body rules
    conditional_keyword: ($) => choice(
      alias("@else", $.directive),
      seq(
        alias(/@(elseif|else[a-zA-Z]+)/, $.directive),
        $._directive_parameter
      )
    ),
    _if: ($) => seq(
      alias("@if", $.directive_start),
      $._conditional_directive_body,
      alias("@endif", $.directive_end)
    ),
    _unless: ($) => seq(
      alias("@unless", $.directive_start),
      $._conditional_directive_body,
      alias("@endunless", $.directive_end)
    ),
    _isset: ($) => seq(
      alias("@isset", $.directive_start),
      $._conditional_directive_body,
      alias("@endisset", $.directive_end)
    ),
    _empty: ($) => seq(
      alias("@empty", $.directive_start),
      $._conditional_directive_body,
      alias("@endempty", $.directive_end)
    ),
    _auth: ($) => seq(
      alias("@auth", $.directive_start),
      $._conditional_body_with_optional_parameter,
      alias("@endauth", $.directive_end)
    ),
    _guest: ($) => seq(
      alias("@guest", $.directive_start),
      $._conditional_body_with_optional_parameter,
      alias("@endguest", $.directive_end)
    ),
    _production: ($) => seq(
      alias("@production", $.directive_start),
      optional($._conditonal_body),
      alias("@endproduction", $.directive_end)
    ),
    _env: ($) => seq(
      alias("@env", $.directive_start),
      $._conditional_directive_body,
      alias("@endenv", $.directive_end)
    ),
    _hasSection: ($) => seq(
      alias("@hasSection", $.directive_start),
      $._conditional_directive_body,
      alias("@endif", $.directive_end)
    ),
    _sectionMissing: ($) => seq(
      alias("@sectionMissing", $.directive_start),
      $._conditional_directive_body,
      alias("@endif", $.directive_end)
    ),
    _error: ($) => seq(
      alias("@error", $.directive_start),
      $._conditional_directive_body,
      alias("@enderror", $.directive_end)
    ),
    // !Authorisation Directives
    _authorization: ($) => choice($._can, $._canany, $._cannot),
    _feature: ($) => seq(
      alias("@feature", $.directive_start),
      $._conditional_directive_body,
      alias("@endfeature", $.directive_end)
    ),
    // !Custom if Statements
    // prec.dynamic(1) ensures this wins over the _inline_directive catch-all
    // when BOTH paths complete (i.e. @endword exists). When no @endword follows,
    // only the inline path completes, so inline wins by default.
    _custom: ($) => prec.dynamic(1, seq(
      choice(
        alias(/@unless[a-zA-Z\d]+/, $.directive_start),
        alias(token(prec(-1, /@[a-zA-Z\d]+/)), $.directive_start)
      ),
      $._conditional_directive_body,
      alias(token(prec(1, /@end[a-zA-Z\d]+/)), $.directive_end)
    )),
    // !switch
    switch: ($) => seq(
      alias("@switch", $.directive_start),
      $._directive_parameter,
      repeat($._case),
      optional(
        seq(
          alias("@default", $.directive),
          repeat1(
            choice(
              ...nodes.without(
                $.doctype,
                $.section,
                $.once,
                $.stack,
                $.verbatim,
                $.envoy,
                $.fragment,
                $.switch
              )
            )
          )
        )
      ),
      alias("@endswitch", $.directive_end)
    ),
    _case: ($) => seq(
      alias("@case", $.directive),
      $._directive_parameter,
      optional(
        repeat1(
          choice(
            ...nodes.without(
              $.doctype,
              $.section,
              $.once,
              $.stack,
              $.verbatim,
              $.envoy,
              $.fragment,
              $.switch
            )
          )
        )
      ),
      optional(alias("@break", $.directive))
    ),
    // !Loops
    _setup: ($) => seq(
      alias("@setup", $.directive_start),
      optional(alias($.text, $.php_only)),
      alias("@endsetup", $.directive_end)
    ),
    _directive_parameter: ($) => seq(
      "(",
      optional(repeat($.parameter)),
      ")"
    ),
    // !parenthesis balancing - for functions/casts
    parameter: ($) => choice(/[^()]+/, $._nested_parenthases),
    _nested_parenthases: ($) => seq("(", repeat($.parameter), ")"),
    text: ($) => prec.right(repeat1($._text)),
    // hidden to reduce AST noise in php_only #39
    // It is selectively unhidden for other areas
    // escaped blade directives e.g. @@if, @@csrf
