test/corpus/attributes.txt
================================================================================
@class
================================================================================

<div @class('test') id="test" style="test" > </div>

--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (directive)
        (parameter))
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (attribute_value)))
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (attribute_value))))
    (end_tag
      (tag_name))))

================================================================================
@style
================================================================================

<div @style('test') > </div>

--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (directive)
        (parameter)))
    (end_tag
      (tag_name))))

================================================================================
@checked
================================================================================

<div @checked('test') > </div>

--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (directive)
        (parameter)))
    (end_tag
      (tag_name))))

================================================================================
@selected
================================================================================

<div @selected('test') > </div>

--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (directive)
        (parameter)))
    (end_tag
      (tag_name))))

================================================================================
@disabled
================================================================================

<div @disabled('test') > </div>

--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (directive)
        (parameter)))
    (end_tag
      (tag_name))))

================================================================================
@readonly
================================================================================

<div @readonly('test') > </div>

--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (directive)
        (parameter)))
    (end_tag
      (tag_name))))

================================================================================
@required
================================================================================

<div @required('test') > </div>

--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (directive)
        (parameter)))
    (end_tag
      (tag_name))))

================================================================================
@if conditional attribute
================================================================================

<div @if(true) x-data="test" @endif></div>

--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (directive_start)
        (parameter)
        (attribute
          (attribute_name)
          (quoted_attribute_value
            (attribute_value)))
        (directive_end)))
    (end_tag
      (tag_name))))

================================================================================
@if/@else conditional attribute
================================================================================

<div class="base" @if(true) x-data="a" @else x-data="b" @endif></div>

--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (attribute_value)))
      (attribute
        (directive_start)
        (parameter)
        (attribute
          (attribute_name)
          (quoted_attribute_value
            (attribute_value)))
        (conditional_keyword
          (directive))
        (attribute
          (attribute_name)
          (quoted_attribute_value
            (attribute_value)))
        (directive_end)))
    (end_tag
      (tag_name))))

================================================================================
@if conditional attribute multiline
================================================================================

<div
    class="test"
    @if($hasAudio)
        x-data="{ playing: false }"
        wire:click="toggle"
    @endif
>
</div>

--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (attribute_value)))
      (attribute
        (directive_start)
        (parameter)
        (attribute
          (attribute_name)
          (quoted_attribute_value
            (attribute_value)))
        (attribute
          (attribute_name)
          (quoted_attribute_value
            (attribute_value)))
        (directive_end)))
    (end_tag
      (tag_name))))

================================================================================
@auth conditional attribute without parameter
================================================================================

<div @auth class="admin" @endauth></div>

--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (directive_start)
        (attribute
          (attribute_name)
          (quoted_attribute_value
            (attribute_value)))
        (directive_end)))
    (end_tag
      (tag_name))))

================================================================================
@production conditional attribute (no parameter accepted)
================================================================================

<div @production data-env="prod" @endproduction></div>

--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (directive_start)
        (attribute
          (attribute_name)
          (quoted_attribute_value
            (attribute_value)))
        (directive_end)))
    (end_tag
      (tag_name))))

================================================================================
nested conditional attributes (@auth inside @if)
================================================================================

<div @if($a) x-data="x" @auth class="admin" @endauth @endif></div>

--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (directive_start)
        (parameter)
        (attribute
          (attribute_name)
          (quoted_attribute_value
            (attribute_value)))
        (attribute
          (directive_start)
          (attribute
            (attribute_name)
            (quoted_attribute_value
              (attribute_value)))
          (directive_end))
        (directive_end)))
    (end_tag
      (tag_name))))
